# raytracer-cpp

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Helper.h  Intersection.cpp  Intersection.h  Intersections.cpp  Intersections.h  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Tuple.cpp  Tuple.h
test/: CMakeLists.txt  CanvasTest.cpp  IntersectionTest.cpp  MatrixTest.cpp  RaysTest.cpp  SpheresTest.cpp  TransformationsTest.cpp  TupleTest.cpp
test/lib/googlemock/: CMakeLists.txt
test/lib/googletest/: CMakeLists.txt
testing-scripts/: Clock.cpp  ProjectileSimulator.cpp
